# angelshark

./: .gitignore  README.md  install_desktop.sh  install_jetson.sh
angelshark/: package.xml
angelshark/launch/: bringup.launch  joy.launch  keyboard_teleop.launch  serial.launch  static_transform_publisher.launch
angelshark/models/angelshark/: angelshark.sdf  pars_bckp.sdf
angelshark/models/pars/: model.config  pars.sdf
angelshark/src/: angelshark_keyboard_teleop.py  show_image.py
angelshark_bringup/: CMakeLists.txt
angelshark_bringup/launch/: bringup.launch  camera_publisher.launch  joy_drive.launch  keyboard_drive.launch  rplidar.launch
angelshark_deeplearning/: CMakeLists.txt  package.xml
angelshark_deeplearning/launch/: angelshark_auto_camera.launch  angelshark_auto_camera_laser.launch  angelshark_auto_camera_one_output.launch  angelshark_auto_laser.launch  angelshark_auto_with_laser.launch  angelshark_predict_and_drive.launch
angelshark_deeplearning/model/: model.json
angelshark_deeplearning/src/: data_extractor.py  data_trainer.ipynb  data_trainer_camera_one_output.ipynb  data_trainer_camera_part.ipynb  data_trainer_laser.ipynb  data_trainer_laser_camera.ipynb  data_trainer_only_image.ipynb  data_trainer_only_image_part.ipynb  data_trainer_only_laser.ipynb  data_trainer_part.ipynb  predictor.py  predictor_camera.py  predictor_camera_laser.py  predictor_camera_one_output.py  predictor_laser.py  predictor_with_laser.py  ros_recorder.sh
angelshark_sim/: CMakeLists.txt  package.xml
angelshark_sim/config/: angelshark_control.yaml  pars_control.yaml
angelshark_sim/launch/: angelshark_sim.launch  angelshark_with_joy.launch  empty_world.launch  joy_drive.launch  keyboard_drive.launch  mcity_world.launch  pist1_construct.launch  sim_joy_drive.launch
angelshark_sim/launch/include/: empty_world.launch.xml  joy_drive.launch.xml  keyboard_drive.launch.xml
angelshark_sim/models/angelshark/: model.config
angelshark_sim/models/angelshark/meshes/: pars.stl
angelshark_sim/models/pars/: pars.sdf  pars.urdf
angelshark_sim/models/pars/meshes/: pars.stl
angelshark_sim/plugins/: CMakeLists.txt
angelshark_sim/rviz/: angelshark.rviz
angelshark_sim/src/: angelshark_joy.py  angelshark_keyboard_teleop.py  gazebo_odometry.py  servo_commands.py  show_image.py  traffic_lights_control.py
angelshark_sim/urdf/: angelshark.urdf  pars.urdf
angelshark_sim/worlds/: citysim.world  citysim_without_car.world  pist1_construct.world
citysim/.hg/cache/: branch2-served  rbc-names-v1  rbc-revs-v1
citysim/.hg/store/: 00changelog.i  00manifest.i  undo
