<?xml version="1.0"?>
<package>
  <name>angelshark_deeplearning</name>
  <version>1.0.0</version>
  <description>A ROS based self driving hydrogen vehicles simulation package</description>

  <maintainer email="halitgurpinar@gmail.com">Halit Gurpinar</maintainer>
  <maintainer email="rootofarch@gmail.com">Huseyin Erdem</maintainer>
  <maintainer email="behcet.senturk@protonmail.com">Behçet Şentürk</maintainer>
  
  <license>GPLv3</license>

  <url type="website">http://hidroket.ankara.edu.tr</url>

  <author email="halitgurpinar@gmail.com">Halit Gurpinar</author>
  <author email="rootofarch@gmail.com">Hüseyin Erdem</author> 
  <author email="behcet.senturk@protonmail.com">Behçet Şentürk</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_depend>rosconsole</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>master_discovery</run_depend>
  <run_depend>master_sync_file</run_depend>

</package>
